Finalised my part showcasing rainfaill on 15th of February for two periods of 51 years

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "hist_gen_mod.C": "cpp"
+        "hist_gen_mod.C": "cpp",
+        "rootlogon.C": "cpp"
     }
 }
